<resources>
    <string name="app_name">ShoppingList</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="createNewListText">Create new list</string>
    <string name="createNewItemText">Add new item</string>
    <string name="listNameHint">List name</string>
    <string name="button_add_new_list_aria">Add new list</string>
    <string name="top_bar_text">Shopping lists</string>
    <string name="itemNameHint">Item name</string>
    <string name="listItems">List items</string>
    <string name="emptyListText">This list seems to be empty.</string>
    <string name="noListsText">You have not created any lists yet.</string>
    <string name="editItemText">Edit item</string>
    <string name="editListText">Edit list name</string>
    <!-- ERROR MESSAGES -->
    <string name="missingFieldNameError">List name cannot be empty!</string>
    <string name="missingItemNameError">Item name cannot be empty!</string>
    <string name="list_loading_failed">Something went wrong with fetching your lists</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="delete_list">Delete list</string>
    <string name="action_register">Register</string>
</resources>