<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialogBody"
    android:layout_width="match_parent"
    android:layout_height="240dp"
    android:layout_gravity="center_vertical"
    tools:layout_editor_absoluteY="246dp">

    <TextView
        android:id="@+id/createNewListText"
        android:layout_width="409dp"
        android:layout_height="45dp"
        android:text="@string/createNewListText"
        android:textSize="34sp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/dialogSaveButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="105dp"
        android:layout_height="45dp"
        android:text="@string/save"
        android:textColor="@color/black"
        app:rippleColor="@android:color/holo_green_light"
        app:strokeColor="@android:color/holo_green_dark"
        tools:layout_editor_absoluteX="218dp"
        tools:layout_editor_absoluteY="178dp" />

    <Button
        android:id="@+id/dialogCancelButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="105dp"
        android:layout_height="45dp"
        android:text="@string/cancel"
        android:textColor="@color/black"
        app:rippleColor="@android:color/holo_red_light"
        app:strokeColor="@android:color/holo_red_dark"
        tools:layout_editor_absoluteX="93dp"
        tools:layout_editor_absoluteY="178dp" />

    <EditText
        android:id="@+id/listNameInputField"
        android:layout_width="230dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/listNameHint"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="93dp"
        tools:layout_editor_absoluteY="116dp" />
</androidx.constraintlayout.widget.ConstraintLayout>