<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialogBody"
    android:layout_width="match_parent"
    android:layout_height="240dp"
    android:layout_gravity="center_vertical">

    <TextView
        android:id="@+id/editListText"
        android:layout_width="230dp"
        android:layout_height="45dp"
        android:text="@string/editListText"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082" />

    <Button
        android:id="@+id/dialogCancelButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="105dp"
        android:layout_height="45dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:text="@string/cancel"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dialogSaveButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@android:color/holo_red_light"
        app:strokeColor="@android:color/holo_red_dark" />

    <Button
        android:id="@+id/dialogSaveButton"
        android:layout_width="105dp"
        android:layout_height="45dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="16dp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:backgroundTint="@color/coolOrange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/listNameInputField"
        android:layout_width="230dp"
        android:layout_height="45dp"
        android:layout_marginTop="37dp"
        android:ems="10"
        android:hint="@string/listNameHint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/dialogCancelButton"
        app:layout_constraintTop_toBottomOf="@+id/editListText"
        tools:layout_editor_absoluteX="93dp" />

</androidx.constraintlayout.widget.ConstraintLayout>